minikube/resources/accounts.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: accounts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
        version: 3.0.0
    spec:
      containers:
        - name: accounts
          image: docker.io/garystafford/storefront-accounts:3.0.0-minikube
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
