minikube/resources/cmak.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmak
  labels:
    app: cmak
spec:
  ports:
    - name: http
      port: 9000
  selector:
    app: cmak
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmak
  labels:
    app: cmak
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cmak
  template:
    metadata:
      labels:
        app: cmak
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: cmak
          image: hlebalbau/kafka-manager:3.0.0.5
          ports:
            - containerPort: 9000
          imagePullPolicy: IfNotPresent
