minikube/resources/fulfillment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fulfillment
  labels:
    app: fulfillment
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: fulfillment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fulfillment
  labels:
    app: fulfillment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fulfillment
  template:
    metadata:
      labels:
        app: fulfillment
        version: 3.0.0
    spec:
      containers:
        - name: fulfillment
          image: docker.io/garystafford/storefront-fulfillment:3.0.0-minikube
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
