minikube/resources/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster
  labels:
    app: kafka-cluster
spec:
  ports:
  - name: http
    port: 9092
  selector:
    app: kafka-cluster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cluster
  labels:
    app: kafka-cluster
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kafka-cluster
  template:
    metadata:
      labels:
        app: kafka-cluster
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: kafka-cluster
        image: wurstmeister/kafka:2.13-2.7.0
        ports:
        - containerPort: 9092
        imagePullPolicy: IfNotPresent
