minikube/resources/mongo-express.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  ports:
  - name: http
    port: 8081
  selector:
    app: mongo-express
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:0.54.0
        ports:
        - containerPort: 8081
        imagePullPolicy: IfNotPresent
