minikube/resources/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - name: http
      port: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: mongo
          image: mongo:4.4.6
          ports:
            - containerPort: 27017
          imagePullPolicy: IfNotPresent
