minikube/resources/orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
        version: 3.0.0
    spec:
      containers:
        - name: orders
          image: docker.io/garystafford/storefront-orders:3.0.0-minikube
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
