minikube/resources/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  ports:
  - name: http
    port: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: zookeeper
        image: zookeeper:3.7.0
        ports:
        - containerPort: 2181
        imagePullPolicy: IfNotPresent
