minikube/resources/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: storefront
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: storefront
spec:
  hosts:
    - "*"
  gateways:
    - storefront-gateway
  http:
    - match:
        - uri:
            prefix: /accounts
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 8080
            subset: v3
            host: accounts.dev.svc.cluster.local
    - match:
        - uri:
            prefix: /orders
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 8080
            subset: v3
            host: orders.dev.svc.cluster.local
    - match:
        - uri:
            prefix: /fulfillment
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 8080
            subset: v3
            host: fulfillment.dev.svc.cluster.local
